--- a/server/package.json
+++ b/server/package.json
@@ -5,5 +5,10 @@
   "license": "MIT",
   "devDependencies": {
     "koa": "^2.15.3"
+  },
+  "dependencies": {
+    "@koa/cors": "^5.0.0",
+    "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0"
   }
 }
